<resources>
    <string name="app_name">App</string>
    <string name="to">TODO</string>
    <string name="tod">TODO</string>
    <string name="button">Button</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="todo">TODO</string>
    <string name="todo1">TODO1</string>

    <!-- TODO: Remove or change this placeholder text -->
    <!--<string name="hello_blank_fragment">Hello blank fragment</string>-->
    <!--<string name="todo">TODO</string>-->
</resources>
